[package]
name = "miow"
version = "0.3.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
keywords = ["iocp", "windows", "io", "overlapped"]
repository = "https://github.com/yoshuawuyts/miow"
homepage = "https://github.com/yoshuawuyts/miow"
documentation = "https://docs.rs/miow/0.3/x86_64-pc-windows-msvc/miow/"
description = """
A zero overhead I/O library for Windows, focusing on IOCP and Async I/O
abstractions.
"""

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]


[dependencies.winapi]
version = "0.3.3"
features = [
  "std",
  "fileapi",
  "handleapi",
  "ioapiset",
  "minwindef",
  "namedpipeapi",
  "ntdef",
  "synchapi",
  "winerror",
  "winsock2",
  "ws2def",
  "ws2ipdef",
]

[dev-dependencies]
rand = "0.8.0"
socket2 = "0.4.0"
