[package]
name = "miow"
version = "0.6.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
keywords = ["iocp", "windows", "io", "overlapped"]
repository = "https://github.com/yoshuawuyts/miow"
homepage = "https://github.com/yoshuawuyts/miow"
documentation = "https://docs.rs/miow"
description = """
A zero overhead I/O library for Windows, focusing on IOCP and async I/O
abstractions.
"""

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[dev-dependencies]
rand = "0.8.0"
socket2 = "0.4.0"
