[package]
name = "miow"
version = "0.6.1"
rust-version = "1.77"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["iocp", "windows", "io", "overlapped"]
repository = "https://github.com/yoshuawuyts/miow"
homepage = "https://github.com/yoshuawuyts/miow"
description = """
A zero overhead I/O library for Windows, focusing on IOCP and async I/O
abstractions.
"""

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[badges]
maintenance = { status = "as-is" }

[dependencies.windows-sys]
version = ">=0.60, <=0.61"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
]

[dev-dependencies]
rand = "0.8.0"
socket2 = "0.6.0"
